[gd_scene load_steps=2 format=3 uid="uid://b0evuncgb2ybn"]

[ext_resource type="Script" path="res://Scenes/Start_Screen/Start_Screen.gd" id="1_ddmkl"]

[node name="Start_Screen" type="Node2D"]
script = ExtResource("1_ddmkl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Start_Game" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -15.5
offset_right = 49.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Start Game"

[node name="Exit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 127.5
offset_right = 93.0
offset_bottom = 272.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Exit"

[node name="Title" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -682.0
offset_top = -504.5
offset_right = 682.0
offset_bottom = -95.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 300
text = "Asteroids"

[node name="High_Score_Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -145.0
offset_right = 87.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "High Score:"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/Start_Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_exit_pressed"]
